--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -21,7 +21,7 @@
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.url | relative_url }}" rel="permalink"><i class="fas fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
+        <a href="{{ post.url | relative_url }}">{{ title }}</a>
       {% endif %}
     </h2>
     <p class="page__meta">
@@ -31,6 +31,6 @@
         <i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}
       {% endif %}
     </p>
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
+    <p>{{ post.content }}</p>
   </article>
 </div>
